--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.7.0",
+    "jquery-bar-rating": "^1.2.2",
+    "star-rating.js": "^4.3.0",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0"
   },
